Import of SRI/Catalyst-View-TT-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SRI/Catalyst-View-TT-0.02.tar.gz
gitpan-cpan-author:       SRI
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ DESCRIPTION
   OVERLOADED METHODS
    process
     Renders the template specified in $c->stash->{template} or
-    $c->request->action to $c->response->output.
+    $c->request->match to $c->response->output.
 
 SEE ALSO
     Catalyst.
