--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.02  Tue Feb 01 02:00:00 2005
+        - using $c->req->match instead of $c->req->action
+
 0.01  Fri Jan 28 22:00:00 2005
         - first release
