--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.03  Thu Feb 17 22:00:00 2005
+        - don't try to render something without a template
+
 0.02  Tue Feb 01 02:00:00 2005
         - using $c->req->match instead of $c->req->action
 
