--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.05  Mon Feb 28 10:00:00 2005
+        - added helper
+
 0.04  Sun Feb 27 22:00:00 2005
         - better debug messages (Marcus Ramberg)
 
