--- a/README
+++ b/README
@@ -2,13 +2,18 @@ NAME
     Catalyst::View::TT - Template View Class
 
 SYNOPSIS
+        # use the helper
+        create view TT TT
+
         # lib/MyApp/View/TT.pm
         package MyApp::View::TT;
 
         use base 'Catalyst::View::TT';
 
-        1;
+        __PACKAGE__->config->{DEBUG} = 'all';
 
+        1;
+    
         $c->forward('MyApp::View::TT');
 
 DESCRIPTION
@@ -19,11 +24,15 @@ DESCRIPTION
     Renders the template specified in $c->stash->{template} or
     $c->request->match to $c->response->output.
 
+   config
+    This allows your view subclass to pass additional settings to the TT
+    config hash.
+
 SEE ALSO
     Catalyst.
 
 AUTHOR
-    Sebastian Riedel, "sri@cpan.org"
+    Sebastian Riedel, "sri@cpan.org" Marcus Ramberg
 
 COPYRIGHT
     This program is free software, you can redistribute it and/or modify it
