Import of SRI/Catalyst-View-TT-0.06.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SRI/Catalyst-View-TT-0.06.tar.gz
gitpan-cpan-author:       SRI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.06  Fri Mar 04 20:00:00 2005
+        - new helper api
+
 0.05  Mon Feb 28 10:00:00 2005
         - added helper
 
