--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.11  Fri Apr 15 16:00:00 2005
+        - Fixed broken helper.
 0.10  Fri Apr 15 16:00:00 2005
         - Added POD tests and made them pass.
         - updated for Catalyst 5
