--- a/Changes
+++ b/Changes
@@ -1,7 +1,14 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.12  Web Jul 06 15:24:00 2005
+        - Fixed, don't set Content-Type on failure
+        - Fixed helper to use [%author%]
+        - Fixed helper templates
+        - Rewrote docs
+
 0.11  Fri Apr 15 16:00:00 2005
         - Fixed broken helper.
+
 0.10  Fri Apr 15 16:00:00 2005
         - Added POD tests and made them pass.
         - updated for Catalyst 5
