--- a/Changes
+++ b/Changes
@@ -1,10 +1,16 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.15  - Mon Nov 14 14:43:00 2005
+        - Updated for Catalyst 5.5
+        - Fix docs
+        - Added TEMPLATE_SUFFIX config variable 
+
 0.14  - Fri Oct 21 10:20:00 2005
-    - Turn timer off by default, even for debug.
-	- removed superflous 'templates' inside 'root'
-	- made it possible to forward to the message action by
-	  passing the message in the stash. (example)
+        - Turn timer off by default, even for debug.
+    	- removed superflous 'templates' inside 'root'
+    	- made it possible to forward to the message action by
+    	  passing the message in the stash. (example)
+        - Updated docs to show correct config syntax.
 
 0.13  Fri Oct 07 13:30:00 2005
         - Fixed constructor
