Import of SRI/Catalyst-View-TT-0.18.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.18
gitpan-cpan-path:         SRI/Catalyst-View-TT-0.18.tar.gz
gitpan-cpan-author:       SRI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.18  - Mon Nov 14 20:43:00 2005
+        - Fixed more typos
+
 0.17  - Mon Nov 14 20:43:00 2005
         - Fixed some typos
 
