--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Catalyst::View::TT.
 
+0.19  - Tue Nov 15 09:52:00 2005
+        - unbreak config.
+
 0.18  - Mon Nov 14 20:43:00 2005
         - Fixed more typos
 
