Import of MRAMBERG/Catalyst-View-TT-0.21.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.21
gitpan-cpan-path:         MRAMBERG/Catalyst-View-TT-0.21.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension Catalyst::View::TT.
 
-0.20
+0.21	
+        - Added Template::Provider support (Jess Robinson)
+        - Fixed dynamic include bugs and added tests. (Zbigniew Lukasiak)
+
+0.20    Mon Dec 12 03:35:00 2005
+        - Fall back to action (default/index returns blank on match)
         - Added tests. (Daniel Westermann-Clark)
         - Fixed TTSite helper to use correct app name.
         - Added support for dynamic includes.
