Import of MRAMBERG/Catalyst-View-TT-0.22.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.22
gitpan-cpan-path:         MRAMBERG/Catalyst-View-TT-0.22.tar.gz
gitpan-cpan-author:       MRAMBERG
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,11 @@
 Revision history for Perl extension Catalyst::View::TT.
 
-0.21	
+0.22	Fri Dec 16 18:25:00 2005
+	- stringify $c->action for automatic template match instead of $c->req->action.
+	  * NOTE * This will change the match to the private name of the matched action! if you
+	  use template_suffix you have to move your templates around!
+
+0.21	Fri Dec 16 18:25:00 2005
         - Added Template::Provider support (Jess Robinson)
         - Fixed dynamic include bugs and added tests. (Zbigniew Lukasiak)
 
