Import of SRI/Catalyst-View-TT-0.23.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-View-TT
gitpan-cpan-version:      0.23
gitpan-cpan-path:         SRI/Catalyst-View-TT-0.23.tar.gz
gitpan-cpan-author:       SRI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Catalyst::View::TT.
 
-0.22	Fri Dec 16 18:25:00 2005
+0.23	Sun Mar 23 20:45:00 2006
+	- Added render suport. (Ash Berlin)
+
+0.22	Fri Jan 16 18:25:00 2006
 	- stringify $c->action for automatic template match instead of $c->req->action.
 	  * NOTE * This will change the match to the private name of the matched action! if you
 	  use template_suffix you have to move your templates around!
